--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   "author": "tharunoptimus",
   "license": "ISC",
   "dependencies": {
+    "@emailjs/nodejs": "^2.2.0",
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongodb": "^5.6.0",
     "mongoose": "^7.3.1",
-    "node-fetch": "^3.3.1"
+    "node-fetch": "^3.3.1",
+    "uuid": "^9.0.0"
   }
 }
