--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^5.1.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "mongodb": "^5.6.0",
     "mongoose": "^7.3.1",
     "node-fetch": "^3.3.1",
