--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "slam-book-server",
   "version": "1.0.0",
-  "description": "",
+  "description": "The server for slam book app",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js"
   },
-  "keywords": [],
+  "keywords": ["node", "slambook", "express", "mongodb"],
   "author": "tharunoptimus",
   "license": "ISC",
   "dependencies": {
@@ -17,7 +17,6 @@
     "express-async-errors": "^3.1.1",
     "mongodb": "^5.6.0",
     "mongoose": "^7.3.1",
-    "node-fetch": "^3.3.1",
     "uuid": "^9.0.0"
   }
 }
