--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
   "scripts": {
     "start": "node app.js"
   },
-  "keywords": ["node", "slambook", "express", "mongodb"],
+  "keywords": [
+    "node",
+    "slambook",
+    "express",
+    "mongodb"
+  ],
   "author": "tharunoptimus",
   "license": "ISC",
   "dependencies": {
@@ -15,6 +20,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^9.0.1",
     "mongodb": "^5.6.0",
     "mongoose": "^7.3.1",
     "uuid": "^9.0.0"
